# regit-curves

./: .gitignore  CHANGELOG.md  Cargo.toml  MATH.md  NOTICE  README.md  SECURITY.md  deny.toml  justfile
.github/workflows/: ci.yml  release.yml
benches/: curves.rs
examples/: quickstart.rs
src/: bootstrap.rs  errors.rs  lib.rs  multi_curve.rs  types.rs
src/curves/: discount.rs  forward.rs  mod.rs  par.rs  zero.rs
src/instruments/: basis_swap.rs  bond.rs  deposit.rs  fra.rs  future.rs  mod.rs  ois_swap.rs  schedule.rs  swap_fixed_float.rs
src/interpolation/: convex_monotone.rs  cubic_spline.rs  hermite_bessel.rs  linear.rs  linear_in_zero.rs  log_linear.rs  mod.rs  monotone_cubic.rs  monotone_hyman.rs  monotone_steffen.rs  piecewise_constant_forward.rs
src/math/: brent.rs  linear_solve.rs  mod.rs  tridiag.rs
tests/: integration.rs
